<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_rss_feed_black_24dp"
            android:title="@string/nav_header_linha_tempo" />
        <item
            android:id="@+id/nav_programacao"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/nav_header_programacao" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_header_perfil" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_header_logout" />

    </group>
</menu>
