<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civFotoPerfilPublicacao"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPublicacaoNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_nome"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPublicacaoData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_data"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvPublicacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/s_publicacao"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivFotoPublicacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/s_content_description_publicacao"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPublicacaoContadorLikes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:padding="2dp"
            android:text="@string/s_numero_zero" />

        <TextView
            android:id="@+id/tvPublicacaoLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawableStart="@drawable/ic_favorite_border_black_24dp"
            android:padding="2dp"
            android:text="@string/s_likes" />

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/tvPublicacaoContadorComentarios"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="2dp"
            android:text="@string/s_numero_zero" />

        <TextView
            android:id="@+id/tvPublicacaoComentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_comment_black_24dp"
            android:padding="2dp"
            android:text="@string/s_comentario" />
    </LinearLayout>

    <include layout="@layout/divisor" />

</LinearLayout>