<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civFotoPerfilFeed"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/foto_de_perfil_padrao" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="76dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bGaleria"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/ic_edit_black_24dp"
                        android:contentDescription="@string/s_cd_galeria" />

                    <Button
                        android:id="@+id/bCamera"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/ic_camera_black_24dp"
                        android:contentDescription="@string/s_cd_camera" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/s_hint_nome"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/s_hint_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edInstituicao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/s_hint_instituicao"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edCargo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/s_hint_cargo"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/botao_customizado"
                    android:gravity="center"
                    android:text="Logout"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <include layout="@layout/content_perfil" />
</FrameLayout>

