<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CadastrarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <EditText
                android:id="@+id/et_nomeCad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/s_hint_nome"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <EditText
                android:id="@+id/et_emailCad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/s_hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/et_nomeCad"
                app:layout_constraintStart_toStartOf="@+id/et_nomeCad"
                app:layout_constraintTop_toBottomOf="@+id/et_nomeCad" />

            <EditText
                android:id="@+id/et_senhaCad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/s_hint_senha"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/et_emailCad"
                app:layout_constraintStart_toStartOf="@+id/et_emailCad"
                app:layout_constraintTop_toBottomOf="@+id/et_emailCad" />

            <EditText
                android:id="@+id/et_confirmarSenhaCad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/s_hint_confirma_senha"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/et_senhaCad"
                app:layout_constraintStart_toStartOf="@+id/et_senhaCad"
                app:layout_constraintTop_toBottomOf="@+id/et_senhaCad" />

            <Button
                android:id="@+id/b_cadastrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/s_cadastrar"
                android:text="@string/s_cadastrar"
                android:textColor="@color/colorWhite"
                android:background="@drawable/botao_customizado"
                app:layout_constraintEnd_toEndOf="@+id/et_senhaCad"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/et_confirmarSenhaCad"
                app:layout_constraintTop_toBottomOf="@+id/et_confirmarSenhaCad" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</FrameLayout>