<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EntrarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            -->
            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_with_google"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/b_login"
                app:layout_constraintStart_toStartOf="@+id/b_login" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <EditText
                android:id="@+id/et_emailLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/s_hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <EditText
                android:id="@+id/et_senhaLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/s_hint_senha"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/et_emailLogin"
                app:layout_constraintStart_toStartOf="@+id/et_emailLogin"
                app:layout_constraintTop_toBottomOf="@+id/et_emailLogin" />

            <Button
                android:id="@+id/b_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/s_login"
                android:contentDescription="@string/s_login"
                android:textColor="@color/colorWhite"
                android:background="@drawable/botao_customizado"
                app:layout_constraintEnd_toEndOf="@+id/et_senhaLogin"
                app:layout_constraintStart_toStartOf="@+id/et_senhaLogin"
                app:layout_constraintTop_toBottomOf="@+id/et_senhaLogin" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/s_ou"
                android:textColor="@color/colorBlack"
                app:layout_constraintBottom_toTopOf="@+id/login_with_google"
                app:layout_constraintEnd_toEndOf="@+id/b_login"
                app:layout_constraintStart_toStartOf="@+id/b_login"
                app:layout_constraintTop_toBottomOf="@+id/b_login"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</FrameLayout>